...
        app:adSize="BANNER_320X50"
        app:adUnitId="test-banner-ad-unit" />
        <!-- Note: Default refreshRate is 30s, can be set via app:refreshRate="60" -->

    <!-- Interstitial Ad Buttons -->
    <Button
        android:id="@+id/btnLoadInterstitial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bannerAdView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Load Interstitial" />

    <Button
        android:id="@+id/btnShowInterstitial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLoadInterstitial"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Show Interstitial" />
...
